--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "morgan": "^1.10.0",
     "node-sass": "^6.0.1",
+    "nodemailer": "^6.7.1",
     "nodemon": "^2.0.12"
   }
 }
